test boundaries of price ranges because that's were the money is